[project]
name = "complianceqapipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.8",
    "azure-search-documents>=12.0.0",
    "azure-storage-blob>=12.29.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "firecrawl-py>=4.26.0",
    "flashrank>=0.2.10",
    "grandalf>=0.8",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-redis>=0.2.5",
    "langgraph>=1.2.0",
    "langsmith>=0.8.4",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
 